@@ -1,5 +1,10 @@
 2004-11-07  Benoit Perrot <benoit@lrde.epita.fr>
 
+	* monoburg.c: Do not emit debug string tables when
+	`--without-debug-tables' is specified.
+
+2004-11-07  Benoit Perrot <benoit@lrde.epita.fr>
+
 	* monoburg.c: Support long options; prefer `--without-glib' to
 	`-g'.
 
